<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:textAlignment="center"
    tools:context="com.ruble.olinefood.activity.AddAccountActivity">

    <TextView
        android:id="@+id/rowTypeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="17dp"
        android:layout_marginTop="15dp"
        android:text="@string/create_account"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@android:color/white" />

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_alignStart="@+id/addressEditText"
        android:layout_below="@+id/rowTypeTextView"
        android:layout_marginTop="29dp"
        android:background="@drawable/roundfield"
        android:ems="10"
        android:hint="@string/enter_your_name"
        android:inputType="textPersonName"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_alignStart="@+id/usernameEditText"
        android:layout_below="@+id/usernameEditText"
        android:layout_marginTop="16dp"
        android:background="@drawable/roundfield"
        android:ems="10"
        android:hint="@string/enter_password_for_account"
        android:inputType="textPassword"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/addressEditText"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_below="@+id/passwordEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/roundfield"
        android:ems="10"
        android:hint="@string/house_street_city_district"
        android:inputType="textPostalAddress"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/phoneEditText"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_alignStart="@+id/addressEditText"
        android:layout_below="@+id/addressEditText"
        android:layout_marginTop="18dp"
        android:background="@drawable/roundfield"
        android:ems="10"
        android:hint="@string/enter_phone_number"
        android:inputType="phone"
        android:textAlignment="center" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_alignEnd="@+id/phoneEditText"
        android:layout_below="@+id/phoneEditText"
        android:layout_marginTop="17dp"
        android:background="@android:drawable/button_onoff_indicator_off"
        android:text="@string/submit_details" />
</RelativeLayout>
