<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.ruble.olinefood.activity.LoginActivity">

    <TextView
        android:id="@+id/newUserTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="21dp"
        android:layout_marginTop="22dp"
        android:text="@string/account_login"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@android:color/background_light" />

    <EditText
        android:id="@+id/phoneLoginEditText"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_below="@+id/newUserTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="67dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/enter_phone_number"
        android:inputType="phone"
        android:textColor="@android:color/background_light"
        android:textColorHint="@android:color/background_light" />

    <EditText
        android:id="@+id/passwordLoginEditText"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_alignStart="@+id/phoneLoginEditText"
        android:layout_below="@+id/phoneLoginEditText"
        android:layout_marginTop="23dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:textColor="@android:color/background_light"
        android:textColorHint="@android:color/background_light" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="125dp"
        android:layout_height="40dp"
        android:layout_alignEnd="@+id/passwordLoginEditText"
        android:layout_below="@+id/passwordLoginEditText"
        android:layout_marginTop="28dp"
        android:background="@android:drawable/button_onoff_indicator_off"
        android:text="@string/login" />

    <TextView
        android:id="@+id/signUpTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="43dp"
        android:text="@string/new_user_sign_up"
        android:textColor="@android:color/holo_blue_bright"
        android:textSize="20sp" />
</RelativeLayout>
